Co-authored-by: manasisoman <manasinsoman@gmail.com>

--- a/BLM.css
+++ b/BLM.css
@@ -60,7 +60,7 @@ display:float;
 
 }
 .title1{
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-family:Georgia, 'Times New Roman', Times, serif
     background-color: rgba(0,0,0,0.1);
     position:right;
 
